[tool.poetry]
name = "service_sales_app"
version = "0.1.0"
description = ""
authors = ["ktlog <tkb.msk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
Pillow = "^9.2.0"
requests = "^2.28.1"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
